Update footer services and contact information; enhance header logo and add motoristas link; refine frota details and styling; adjust index banner image.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,12 +34,12 @@ const yearsInBusiness = today.getFullYear() - 2010;
 				<div class="footer-column">
 					<h4>Serviços</h4>
 					<ul class="footer-links">
-						<li><a href="/servicos/transporte-rodoviario">Transporte Rodoviário</a></li>
-						<li><a href="/servicos/carga-fracionada">Carga Fracionada</a></li>
-						<li><a href="/servicos/carga-completa">Carga Completa</a></li>
-						<li><a href="/servicos/armazenagem">Armazenagem</a></li>
-						<li><a href="/servicos/logistica">Logística</a></li>
-					</ul>
+                        <li><a href="/servicos#excedentes">Cargas Excedentes</a></li>
+                        <li><a href="/servicos#container">Container 20’ e 40’ (Flat Rack / Open Top)</a></li>
+                        <li><a href="/servicos#alto-valor">Cargas de Alto Valor Agregado</a></li>
+                        <li><a href="/servicos#sensiveis">Equipamentos Sensíveis</a></li>
+                        <li><a href="/servicos#escolta">Transporte com Escolta</a></li>
+                    </ul>
 				</div>
 				
 				<div class="footer-column contact-column">
@@ -63,7 +63,7 @@ const yearsInBusiness = today.getFullYear() - 2010;
 								<path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
 								<circle cx="12" cy="10" r="3"></circle>
 							</svg>
-							<p>Rua Exemplo, 123<br>Bairro - Curitiba/PR<br>CEP: 80000-000</p>
+							<p>Rua Santo Antônio Tortato, 1860<br>Umbará, Curitiba - PR<br>CEP: 81940-330</p>
 						</div>
 					</div>
 				</div>
