--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -48,7 +48,7 @@ import Layout from '../layouts/BlogPost.astro';
 				</div>
 				<div class="info-content">
 					<h4>Endereço</h4>
-					<p>Rua Exemplo, 123<br>Bairro - Curitiba/PR<br>CEP: 80000-000</p>
+					<p>Rua Santo Antônio Tortato, 1860<br>Umbará, Curitiba - PR<br>CEP: 81940-330</p>
 				</div>
 			</div>
 			
@@ -142,19 +142,19 @@ import Layout from '../layouts/BlogPost.astro';
 	</div>
 	
 	<div class="map-section">
-		<h3>Nossa Localização</h3>
-		<div class="map-container">
-			<iframe 
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115801.1846401127!2d-49.33459270652424!3d-25.494938986033835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce3f7b5d86301%3A0xdcbf5e1e4e8c4061!2sCuritiba%2C%20PR!5e0!3m2!1spt-BR!2sbr!4v1652374568974!5m2!1spt-BR!2sbr" 
-				width="100%" 
-				height="450" 
-				style="border:0;" 
-				allowfullscreen="" 
-				loading="lazy" 
-				referrerpolicy="no-referrer-when-downgrade">
-			</iframe>
-		</div>
-	</div>
+        <h3>Nossa Localização</h3>
+        <div class="map-container">
+            <iframe 
+                src="https://www.google.com/maps?q=Rua+Santo+Ant%C3%B4nio+Tortato,+1860,+Umbar%C3%A1,+Curitiba+-+PR,+81940-330&output=embed"
+                width="100%" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
 </Layout>
 
 <script>
