--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import { SITE_TITLE } from '../consts';
 ---
 
 <header>
-	<div class="header-container">
-		<div class="logo-container">
+    <div class="header-container">
+        <div class="logo-container">
             <a href="/" class="logo">
                 <span class="logo-truck">
                     <svg class="truck-anim" width="48" height="28" viewBox="0 0 48 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,36 +21,40 @@ import { SITE_TITLE } from '../consts';
                 <span class="logo-text">AAS Transportes</span>
             </a>
         </div>
-		
-		<input type="checkbox" id="menu-toggle" class="menu-toggle" />
-		<label for="menu-toggle" class="menu-button">
-			<span></span>
-			<span></span>
-			<span></span>
-		</label>
-		
-		<nav class="main-nav">
-			<div class="nav-links">
-				<HeaderLink href="/">Início</HeaderLink>
-				<HeaderLink href="/solucoes">Soluções</HeaderLink>
-				<HeaderLink href="/frota">Nossa Frota</HeaderLink>
-				<HeaderLink href="/servicos">Serviços</HeaderLink>
-				<HeaderLink href="/motoristas">Motoristas</HeaderLink>
-				<HeaderLink href="/sobre">Sobre Nós</HeaderLink>
-				<HeaderLink href="/contato" class="contact-button">Contato</HeaderLink>
-			</div>
-		</nav>
-		
-		<div class="contact-info">
-			<a href="tel:+5541988287226" class="phone-link">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-					<path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-				</svg>
-				<span>(41) 98828-7226</span>
-			</a>
-		</div>
-	</div>
+        
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <label for="menu-toggle" class="menu-button">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        
+        <nav class="main-nav">
+            <div class="nav-links">
+                <HeaderLink href="/">Início</HeaderLink>
+                <HeaderLink href="/solucoes">Soluções</HeaderLink>
+                <HeaderLink href="/frota">Nossa Frota</HeaderLink>
+                <HeaderLink href="/servicos">Serviços</HeaderLink>
+                <HeaderLink href="/motoristas">Motoristas</HeaderLink>
+                <HeaderLink href="/sobre">Sobre Nós</HeaderLink>
+                <HeaderLink href="/contato" class="contact-button">Contato</HeaderLink>
+            </div>
+        </nav>
+        
+        <div class="contact-info">
+            <a href="tel:+5541988287226" class="phone-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+                </svg>
+                <span>(41) 98828-7226</span>
+            </a>
+        </div>
+    </div>
 </header>
+
+<section class="hero">
+  <!-- Hero content goes here -->
+</section>
 
 <style>
 	header {
