--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import { SITE_TITLE } from '../consts';
                         <rect x="38" y="14" width="4" height="4" rx="1" fill="#FF9900"/>
                     </svg>
                 </span>
-                <span class="logo-text">AAS Transportes</span>
+                <span class="logo-text" style="color: #003366; font-weight: 600;">AAS Transportes</span>
             </a>
         </div>
         
