--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<!-- Banner Section -->
 <section class="banner">
     <img 
-        src="https://images.unsplash.com/vector-1747701136793-af2a33ceae5d?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+        src="https://res.cloudinary.com/dhmsxwk57/image/upload/v1747704969/BannerAAS-TRANSPORTES_crjhh6.png" 
         alt="Banner AAS Transporte" 
         class="banner-img"
         loading="eager"
