Update banner image in index.astro for improved visual appeal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<!-- Banner Section -->
 <section class="banner">
     <img 
-        src="https://res.cloudinary.com/dhmsxwk57/image/upload/v1747704969/BannerAAS-TRANSPORTES_crjhh6.png" 
+        src="https://www.canva.com/design/DAGn8St_irU/gpHchtmQrAB1gL_yBLklMQ/view" 
         alt="Banner AAS Transporte" 
         class="banner-img"
         loading="eager"
