--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<!-- Banner Section -->
 <section class="banner">
     <img 
-        src="https://www.canva.com/design/DAGn8St_irU/gpHchtmQrAB1gL_yBLklMQ/view" 
+        src="https://res.cloudinary.com/dhmsxwk57/image/upload/v1747705699/BannerAAS-TRANSPORTES-ASTRO_ivtmm3.png" 
         alt="Banner AAS Transporte" 
         class="banner-img"
         loading="eager"
